<resources>
    <string name="app_name">MvcYugiohApp</string>
    <string name="general">General</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="database">DataBase</string>
    <string name="cards">Cards</string>
    <string name="Navigation_Drawer_Open">Open</string>
    <string name="Navigation_Drawer_Close">Close</string>
    <string name="cards_total">Cards Total</string>
    <string name="last_banlist">Last Banlist:</string>
    <string name="last_update">Last Update:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="updating_database">Updating DataBase...</string>
    <string name="add">Add</string>
    <string name="leave">Leave</string>
    <string name="decks">Decks:</string>
    <string name="add_to">Add to:</string>
    <string name="delete">Delete</string>
    <string name="deck_name">Deck Name...</string>
    <string name="create_a_new_deck">Create a new Deck</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_deck">Add to Deck</string>
    <string name="amount">Amount:</string>
    <string name="create">Create</string>
    <string name="deck_creation_failed">Deck Creation Failed</string>
    <string name="ok">OK</string>
    <string name="deck_composition">Deck Composition</string>
    <string name="extra_deck">Extra Deck:</string>
    <string name="fusions">Fusions:</string>
    <string name="synchros">Synchros:</string>
    <string name="sort_by">Sort by...</string>
    <string name="card_type">Card Type</string>
    <string name="attribute">Attribute</string>
    <string name="race">Race</string>
    <string name="a_z">A-Z</string>
    <string name="level_rank">Level/Rank</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="order_by">Order By...</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="apply">Apply</string>
    <string name="name_or_card_text">Name or Card Text</string>
    <string name="coin_flip">Coin Flip</string>
    <string name="calculator">Calculator</string>
    <string name="dice">Dice</string>
    <string name="reset">Reset</string>
    <string name="log">Log</string>
    <string name="minus">-</string>
    <string name="Clear">C</string>
    <string name="addition">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="half">1/2</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="otk">OTK</string>
    <string name="seven">seven</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_00">00</string>
    <string name="_000">000</string>
    <string name="flip">Flip</string>
    <string name="select_deck">Select Deck</string>
    <string name="delete_deck">Delete Deck</string>
    <string name="rename_deck">Rename Deck</string>
    <string name="rename">Rename</string>
    <string name="banList">2021-6-21</string>
    <string name="player_1_8000">Player 1 : 8000</string>
    <string name="player_2_8000">Player 2 : 8000</string>
</resources>