<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <LinearLayout
        android:id="@+id/titlelinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_a_new_deck"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titlelinearLayout"
        android:hint="@string/deck_name"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:autofillHints="" />
    <RelativeLayout
        android:id="@+id/btnLayout"
        android:layout_below="@id/nameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="6dp"
            android:backgroundTint="@color/primary_grey"
            android:text="@string/cancel"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"

            android:layout_marginStart="187dp"
            android:layout_marginTop="7dp"
            android:backgroundTint="@color/primary_grey"
            android:text="@string/create" />
    </RelativeLayout>

</RelativeLayout>