<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/titlelinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_deck"
            android:layout_gravity="center"
            android:textSize="30sp"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/spinnerlinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlelinearLayout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"

            android:layout_marginTop="0dp"
            android:text="Decks: "
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/deckSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"

            android:layout_marginEnd="61dp"
            android:layout_marginBottom="10dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerlinearLayout"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="173dp"
            android:layout_marginTop="-2dp"
            android:backgroundTint="@color/light_blue"
            android:text="@string/delete" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="49dp"
            android:layout_marginTop="2dp"
            android:backgroundTint="@color/red"
            android:text="@string/cancel" />
    </RelativeLayout>

</RelativeLayout>